src/scss/main.scss
@import "_normalize";
@import "_variables";
@import url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');

// keyframes

@keyframes line-off {
  from {
    transform: rotate(135deg);
    color: #efefef;
  }

  to {
    transform: rotate(45deg);
    color: #1a1a1a;
  }
}

@keyframes line-on {
  from {
    transform: rotate(45deg);
    color: #1a1a1a;
  }

  to {
    transform: rotate(135deg);
    color: #fff;
  }
}

@keyframes switch-off {
  from {
    background-color: #1a1a1a;
    border-color: #fefefe;
  }

  to {
    background-color: #fefefe;
    border-color: #1a1a1a;
  }
}

@keyframes switch-on {
  from {
    background-color: #fefefe;
    border-color: #1a1a1a;
  }

  to {
    background-color: #1a1a1a;
    border-color: #fefefe;
  }
}

@keyframes menu-on {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0);
  }
}

@keyframes menu-off {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
  }
}

@keyframes heroHeader {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes articleList-on {
  from {
    height: 0;
    opacity: 0;
  }

  to {
    height: auto;
    opacity: 1;
  }
}

@keyframes articleList-off {
  from {
    height: auto;
    opacity: 1;
  }

  to {
    height: 0;
    opacity: 0;
  }
}

// reset

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

// body
body {
  font-family: 'Rubik', sans-serif;
  background: #FFFFEA;
  background-size: 20px 20px;
  background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);

  @media (min-width: 768px) and (orientation: portrait) {
    font-size: 1.2rem;
  }

  @media (min-width: 768px) and (orientation: portrait) {
    font-size: 1.6rem;
  }

  @media (min-width: 1366px) {
    font-size: 1.4rem;
  }
}

/*button menu */
.menuButton,
.article__button {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 4rem;
  height: 4rem;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 2rem;
  border: 3px solid #1a1a1a;
  background: #fefefe;
  transform: rotate(90deg);
  z-index: 3;
}

.menuButton {
  &:hover {
    cursor: pointer;
  }

  &__line {
    font-size: 3rem;
    color: #1a1a1a;
    transform: rotate(45deg);

    &--on {
      animation-name: line-on;
      animation-duration: .6s;
      animation-fill-mode: both;
    }

    &--off {
      animation-name: line-off;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }

  &__switch {
    &--off {
      animation-name: switch-off;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }

  &__switch {
    &--on {
      animation-name: switch-on;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }
}

.article__button.article__button--position {
  left: 0;
  transform: rotate(0deg);
}

.menu-on {
  animation-name: menu-on;
  animation-duration: .6s;
  animation-fill-mode: both;
}

.menu-off {
  animation-name: menu-off;
  animation-duration: .6s;
  animation-fill-mode: both;
}

.strong__header {
  text-transform: uppercase;
}
/* ... */

